<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="sync_account_type">popularmovies.dashengz.com</string>
    <string name="content_authority">com.dashengz.popularmovies</string>

    <string name="img_url_base">http://image.tmdb.org/t/p/</string>
    <string name="youtube_url_base">https://www.youtube.com/watch?v=</string>
    <string name="img_size">w185</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_main">Popular Movies</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="title_activity_review_detail">Review Detail</string>

    <string name="detail_title_label">Original Title:</string>
    <string name="detail_date_label">Release Date:</string>
    <string name="detail_rating_label">Rating:</string>
    <string name="detail_overview_label">Overview:</string>
    <string name="detail_trailer_label">Trailers:</string>
    <string name="detail_review_label">Reviews:</string>
    <string name="detail_review_author_label">Author:</string>
    <string name="detail_review_read_more">Read More</string>

    <string name="movie_poster_description">This is a poster of the movie.</string>
    <string name="detail_review_list_description">This is a review of the movie.</string>
    <string name="detail_trailer_list_description">This is a trailer of the movie.</string>

    <string name="share_hashtag">" #PopularMoviesApp"</string>
    <string name="share_title_1">"Let\'s find out more about "</string>
    <string name="share_title_2">" on"</string>
    <string name="share_trailer_1">"Check out this trailer of "</string>
    <string name="share_trailer_2">" on YouTube: "</string>
    <string name="toast_unrecognizable_trailer">Cannot recognize this trailer</string>

    <string name="favorite">Mark as Favorite</string>
    <string name="remove_favorite">Remove from Favorite</string>

    <string name="format_notification"><xliff:g id="movie_name">%1$s</xliff:g> (Rating: <xliff:g id="movie_rating">%2$s</xliff:g>)</string>
    <string name="pref_last_notification">last_notification</string>

    <string name="empty_movie_list">No Movie Information Available</string>
    <string name="empty_review_list">No Review Information Available</string>
    <string name="empty_trailer_list">No Trailer Information Available</string>
    <string name="empty_no_network">. Please connect to the Internet.</string>

    <string name="gcm_movie_alert">Heads up: %1$s is the new best!</string>
</resources>
